<resources>
    <string name="app_name" translatable="true">FitnessPursuit</string>

    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="exercice">
        <item>HIIT</item>
        <item>Split workout legs</item>
        <item>Full body strength workout</item>
        <item>High intensity cardio session</item>
    </string-array>

    <string-array name="exercice2">
        <item>Split workout chest and shoulders</item>
        <item>Split workout legs</item>
        <item>Full body strength workout</item>
    </string-array>



    <string name="title_activity_login">Sign in</string>
    <string name="toast_not_logged_in">Please log in or create a profile.</string>

    <!-- Strings related to login -->
    <string name="sign_in_cancelled">You cancelled your sign in.</string>
    <string name="successful_sign_in">Welcome back! You are now good to go.</string>
    <string name="no_internet_connection">You don\'t have any connection to the Internet.</string>
    <string name="signin_error">"Sign-in error: </string>


    <string name="title_activity_week">WeekActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="Home">Home</string>
    <string name="Schedule">Schedule</string>
    <string name="progress">Questionnaire</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="Food">Food Log</string>

    <string name="meal_added">Meal added successfully!</string>
    <string name="Profile">Profile</string>
    <string-array name="languages">
        <item>English</item>
        <item>Français</item>
        <item>Deutsch</item>
    </string-array>


    <string name="questionnaire_info_general">We need some more info to generate your training plan.</string>
    <string name="questionnaire_data_safety">Don\'t worry, we will not sell this data or use it elsewhere. ;)</string>
    <string name="questionnaire_age">Please pick your current age:</string>
    <string name="questionnaire_frequency">Number of sessions per week:</string>
    <string name="questionnaire_info_age">ⓘ  This will be used to calculate your target heart rate.</string>
    <string name="questionnaire_info_frequency">ⓘ For beginners 2 to 3 times a week is a good start.</string>
    <string name="questionnaire_program">Choose your main goal and level:</string>
    <string name="questionnaire_info_goals">ⓘ More information about the program on selection.</string>
    <string-array name="questionnaire_goals">
        <item>Gain strength - Beginner</item>
        <item>Gain strength - Advanced</item>
        <item>Gain strength - Pro</item>
        <item>Increase Endurance</item>
        <item>Lose weight</item>
    </string-array>

    <string-array name="questionnaire_toasts_goals">
        <item>This program will focus on weightlifting and strength training with low weights.</item>
        <item>Here you will focus on weightlifting and strength training with medium weights.</item>
        <item>This programme is weightlifting with heavy weights.</item>
        <item>In this regime we will focus on endurance exercises like running or cycling.</item>
        <item>This is a mix of strength and endurance, focusing on weightloss.</item>
    </string-array>
    <string name="title_activity_questionnaire2">QuestionnaireActivity2</string>
    <string name="food_no_input">Nothing has been inputted yet.</string>
    <string name="food_enter_information">Please enter all necessary information!</string>
    <string name="food_today">Today: </string>
    <string name="food_calorie_graph">Calorie intake over the past 7 days:</string>
    <string name="food_protein_graph">Protein intake over the past 7 days:</string>
    <string name="food_carbohydrate_graph">Carbohydrate intake over the past 7 days:</string>
    <string name="food_fats_graph">Fat intake over the past 7 days:</string>
    <string name="food_no_data_graph">There is no data to be displayed.</string>

    <string name="splash_intro">to your personalized fitness experience!</string>
    <string name="food_meal">Meal</string>
    <string name="food_submit">Submit</string>
    <string name="food_meal_name">Meal Name</string>
    <string name="food_fats">Fats (g)</string>
    <string name="food_carbohydrates">Carbohydrates (g)</string>
    <string name="food_protein">Protein (g)</string>
    <string name="food_calories">Calories (cal)</string>
    <string name="profile_name">Name</string>
    <string name="profile_language">Language:</string>
    <string name="title_activity_questionnaire_fab">Questionnaire</string>
    <string name="questionnaire_nameinput">Name</string>
    <string name="questionnaire_name">Tell us your name:</string>
    <string name="questionnaire_preferred_language">Preferred language:</string>
    <string name="mealgraph_title">Nutrition Overview</string>
    <string name="calendar_title">Food Log Calendar</string>
    <string name="meal_log_page">Meal Log</string>
    <string name="food_log_overview">Daily Overview</string>
    <string name="add_meal_button">ADD MEAL</string>
    <string name="pro_btn">Pro</string>
    <string name="fat_btn">Fat</string>
    <string name="carb_btn">Carb</string>
    <string name="cal_btn">Cal</string>
    <string name="welcome_splash">Welcome</string>
    <string name="your_progress_photos">Your Progress Photos</string>
    <string name="user_deleted">User account deleted.</string>
    <string name="sign_out_successful">Successful sign-out.</string>
    <string name="profile">Profile</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="log_out_btn">Log out</string>
    <string name="save_btn">Save</string>
    <string name="take_photo">Take Photo</string>
    <string name="progress_menubar">Pictures of your progress</string>
    <string name="delete_account">Delete Account?</string>
    <string name="sure_about_deletion">Are you sure you want to delete your account?</string>
    <string name="reminder">Reminder</string>
    <string name="notification_text">Don\'t forget to log your meals for today!</string>
    <string name="successful_submission">Successful submission</string>
    <string name="undo">Undo</string>
    <string name="really_exit">Really Exit?</string>
    <string name="sure_about_exit">Are you sure you want to exit?</string>

</resources>
