<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp">

                <android.support.constraint.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.05" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.65" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <android.support.constraint.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.95" />


                <TextView
                    android:id="@+id/nametxt"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/questionnaire_name"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/nameInput"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="@+id/nameInput" />

                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="160dp"
                    android:layout_height="44dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:hint="@string/questionnaire_nameinput"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/languagespin"
                    app:layout_constraintStart_toEndOf="@+id/nametxt"
                    app:layout_constraintTop_toTopOf="@+id/guideline" />

                <TextView
                    android:id="@+id/languagetxt"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/questionnaire_preferred_language"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/nameInput" />

                <Spinner
                    android:id="@+id/languagespin"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/languagetxt"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toEndOf="@+id/languagetxt"
                    app:layout_constraintTop_toTopOf="@+id/languagetxt" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/questionnaire_age"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/languagespin" />

                <NumberPicker
                    android:id="@+id/numberPickerAge"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="5dp"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:textSize="22dp"
                    app:layout_constraintBottom_toBottomOf="@+id/age"
                    app:layout_constraintStart_toEndOf="@+id/guideline1"
                    app:layout_constraintTop_toTopOf="@+id/age"
                    app:layout_constraintVertical_bias="0.409" />

                <TextView
                    android:id="@+id/info_age"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/questionnaire_info_age"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/numberPickerAge" />

                <TextView
                    android:id="@+id/frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="60dp"
                    android:text="@string/questionnaire_frequency"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/info_age"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/info_age" />

                <NumberPicker
                    android:id="@+id/numberPickerFrequency"
                    android:layout_width="50sp"
                    android:layout_height="60sp"
                    android:layout_marginStart="24dp"
                    android:scaleX="1"
                    android:scaleY="1"
                    android:textSize="22dp"
                    app:layout_constraintBottom_toBottomOf="@+id/frequency"
                    app:layout_constraintStart_toEndOf="@+id/guideline1"
                    app:layout_constraintTop_toTopOf="@+id/frequency" />

                <TextView
                    android:id="@+id/info_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/questionnaire_info_frequency"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/numberPickerFrequency" />

                <TextView
                    android:id="@+id/goal"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/questionnaire_program"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/info_frequency" />

                <Spinner
                    android:id="@+id/spinner_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="21dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/goal" />


            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>