<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pursuit.fitness.fitnesspursuit.HomeActivity">

    <TextView
        android:id="@+id/txt_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Home"
        android:textColor="@android:color/black"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <ImageButton
        android:id="@+id/imgbtn_schedule"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_food"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:srcCompat="@drawable/schedule"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:scaleType="fitCenter"/>

    <ImageButton
        android:id="@+id/imgbtn_progress"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_profile"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:srcCompat="@drawable/progress"
        android:adjustViewBounds="true"
        android:padding="20dp"
        android:scaleType="fitCenter"/>

    <ImageButton
        android:id="@+id/imgbtn_food"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:srcCompat="@drawable/food"
        android:adjustViewBounds="true"
        android:padding="15dp"
        android:scaleType="fitCenter"/>

    <ImageButton
        android:id="@+id/imgbtn_profile"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:srcCompat="@drawable/profile"
        android:adjustViewBounds="true"
        android:padding="15dp"
        android:scaleType="fitCenter"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/txt_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/Schedule"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_schedule"
        app:layout_constraintEnd_toEndOf="@+id/imgbtn_schedule"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgbtn_schedule"
        app:layout_constraintTop_toBottomOf="@+id/guideline10"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/progress"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_progress"
        app:layout_constraintEnd_toEndOf="@+id/imgbtn_progress"
        app:layout_constraintStart_toStartOf="@+id/imgbtn_progress"
        app:layout_constraintTop_toBottomOf="@+id/txt_home"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Food"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_food"
        app:layout_constraintEnd_toEndOf="@+id/imgbtn_food"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgbtn_food" />

    <TextView
        android:id="@+id/txt_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Profile"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imgbtn_profile"
        app:layout_constraintEnd_toEndOf="@+id/imgbtn_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgbtn_profile" />

</android.support.constraint.ConstraintLayout>
